# api/controllers/scan.js
@@ -152,6 +152,115 @@ function saveScanForElectronicJournal(req, res) {
 };
 
 
+
+function saveResource(req, res) {
+    var response = res;
+    var identifier = {
+        "scheme": req.swagger.params.identifierScheme.value,
+        "literalValue": req.swagger.params.identifierLiteralValue.value
+    };
+    var resourceType = req.swagger.params.resourceType.value;
+    var firstPage = req.swagger.params.firstPage.value;
+    var lastPage = req.swagger.params.lastPage.value;
+    var binaryFile = req.swagger.params.binaryFile.value;
+    var textualPdf = req.swagger.params.textualPdf.value;
+    var stringFile = req.swagger.params.stringFile.value;
+    var embodimentType = req.swagger.params.embodimentType.value;
+    return response.status(200).json("TBI");
+    // 1. Check whether resource already exists given it's identifier, resourceType and maybe first or lastPage
+/*    databaseHelper.resourceExists(identifier, resourceType, firstPage, lastPage, function(err, resource){
+        if(err){
+            errorlog.error(err);
+            return response.status(500).json(err);
+        }else if(resource){
+            // 1a. resource already exists
+            // 2. now we have to append the string file or textual pdf if given
+            if(!binaryFile && !stringFile){
+                return response.status(400).json({"message":"The resource already exists."});
+            }
+            databaseHelper.saveReferencesPageForResource(resource, binaryFile, textualPdf,stringFile,embodimentType, function(err, result){
+                if(err){
+                    errorlog.error(err);
+                    return response.status(500).json(err);
+                }
+                return response.json(result);
+            });
+        }else if(!resource){
+            // 1b. resource does not exist; we will have to create it depending on the resourceType and identifier
+            switch (resourceType) {
+                case enums.resourceType.journal:
+                    // The resource is a journal, the ZDB ID should be given and basically nothing else
+                    if(identifier.scheme !== enums.identifier.zdb_ppn || stringFile || binaryFile || firstPage || lastPage){
+                        return response.status(400).json({"message": "In order to create a journal resource in the db, provide the zdb ppn."})
+                    }else{
+                        return swbHelper.query(identifier.literalValue, resourceType, function (err, resource) {
+                            if(err){
+                                errorlog.error(err);
+                                return response.status(500).json(err);
+                            }
+                            // we retrieved the metadata; As it should not be possible to append a scan directly to a journal,
+                            // we are done
+                            // TODO: Or do we have to do anything else now?
+                            resource.identifiers.push(identifier);
+                            resource.type = resourceType;
+                            mongoBr.create(resource, function(err, resource){
+                                if(err){
+                                    errorlog.log(err);
+                                    return response.status(500).json(err);
+                                }
+                                return response.status(200).json(resource);
+                            });
+                        });
+                    }
+                case enums.resourceType.journalVolume:
+                    return response.status(400).json("Not implemented yet.");
+                case enums.resourceType.journalIssue:
+                    return response.status(400).json("Not implemented yet.");
+                case enums.resourceType.journalArticle:
+                    if(identifier.scheme !== enums.identifier.olc_ppn || identifier.scheme !== enums.identifier.doi){
+                        return response.status(400).json({"message": "Not the appropriate input data for creating a journal article."})
+                    }else {
+                        switch (identifier.scheme){
+                            case enums.identifier.doi:
+                                // go to crossref and create article
+                                crossrefHelper.queryByDOI(identifier.literalValue, function(err, resources){
+                                    // wenn das journal nicht existiert, kann auch das issue und das volume und der article nicht existieren
+                                    // hier muss hierarschich vorgegangen werden
+                                    databaseHelper.curateJournalHierarchy(resources, function(err, resources){
+                                        // jetzt müssen wir gucken, ob man noch einen Scan speichern muss oder nicht
+                                        if(!binaryFile && !stringFile){
+                                            return response.json(resources);
+                                        }
+                                        for(var resource of resources){
+                                            if(resource.type === enums.resourceType.journalArticle){
+                                                databaseHelper.saveReferencesPageForResource(resource, binaryFile, textualPdf, stringFile,embodimentType, function(err, result){
+                                                    if(err){
+                                                        errorlog.error(err);
+                                                        return response.status(500).json(err);
+                                                    }
+                                                    return response.json(result);
+                                                });
+                                            }
+                                        }
+
+                                    });
+                                });
+                            case enums.identifier.olc_ppn:
+                                // go to olc and create article
+                                return response.status(400).json({"message": "To be implemented."});
+                        }
+                    }
+                case enums.resourceType.book:
+                    return response.status(400).json({"message": "Resource type book is not specific enough."});
+                default:
+                    return response.status(400).json({"message": "Resource type not implemented yet."});
+            }
+        }
+    });*/
+}
+
+
+
 function getToDo(req, res) {
     var response = res;
     var status = req.swagger.params.status.value;
@@ -753,6 +862,7 @@ function triggerOcrProcessing(req, res) {
 module.exports = {
     saveScan: saveScan,
     saveScanForElectronicJournal: saveScanForElectronicJournal,
+    saveResource: saveResource,
     getToDo: getToDo,
     triggerOcrProcessing: triggerOcrProcessing,
     get: get,
